Fix wrap issue with long route names

--- a/src/plugins/cloud-foundry/view/applications/workflows/add-app-workflow/add-app-workflow.scss
+++ b/src/plugins/cloud-foundry/view/applications/workflows/add-app-workflow/add-app-workflow.scss
@@ -20,4 +20,5 @@ add-app-workflow {
 .offline-route-value {
   color: $gray-darker;
   background: none;
+  word-wrap: break-word;
 }
